crates/weft-snapshots/tests/snapshots/html-data/corpus-leaderboard.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-leaderboard as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Leaderboard</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="leaderboard" aria-label="Leaderboard">
  <h1 data-weft-id="title">Leaderboard</h1>
  <div data-weft-id="leader" class="weft-row" style="gap: var(--weft-space-xs)">
    <div data-weft-id="leader-label" data-weft-kind="text">In the lead:</div>
    <div data-weft-id="leader-name" data-weft-kind="text">Grace</div>
  </div>
  <ol data-weft-id="players">
    <li data-weft-id="player[0]">
      <div data-weft-id="player-name[0]" data-weft-kind="text">Grace</div>
      <div data-weft-id="player-score[0]" data-tone="muted" data-weft-kind="text">1280</div>
    </li>
    <li data-weft-id="player[1]">
      <div data-weft-id="player-name[1]" data-weft-kind="text">Alan</div>
      <div data-weft-id="player-score[1]" data-tone="muted" data-weft-kind="text">1105</div>
    </li>
    <li data-weft-id="player[2]">
      <div data-weft-id="player-name[2]" data-weft-kind="text">Ada</div>
      <div data-weft-id="player-score[2]" data-tone="muted" data-weft-kind="text">990</div>
    </li>
  </ol>
</main>
</body>
</html>
